--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ body{
    
     .menu{
         display: block;
-        margin: 5%;
+        margin: 0;
         width:auto;
     }
     .content-wrapper{
@@ -179,14 +179,26 @@ body{
     .image>img, .image-text{
         width: 300px;
     }
-    
-
+    .content-about{
+        flex-direction: column;
+        align-items: center;
+    }
+    .myface{
+        width: 400px;
+        height: 400px;
+    }
+    .style-heading{
+        font-size: 24px;
+    }
+    .style-other{
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width:640px){
     .menu{
         display: block;
-        margin: 5% auto;
+        margin: 0 auto;
         width:auto;
     }
     .content-wrapper{
@@ -196,5 +208,18 @@ body{
     .image>img, .image-text{
         width: 325px;
     }
-
+    .myface{
+        width: 400px;
+        height: 400px;
+    }
+    .content-about{
+        flex-direction: column;
+        align-items: center;
+    }
+    .style-heading{
+        font-size: 24px;
+    }
+    .style-other{
+        font-size: 20px;
+    }
 }
